# dask-sharedpool

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg
dask_sharedpool/: __init__.py  cluster.py  config.py  jobqueue-bnlt3.yaml
tests/: test_cluster.py
