[metadata]
name = dask_sharedpool
version = 0.3.5
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
author = Doug Benjamin
author_email = dbenjamin@bnl.gov
url = https://github.com/dougbenjamin/dask-sharedpool
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Distributed Computing

[options]
packages =
    dask_sharedpool
install_requires =
    click>=7.0
    click-didyoumean
    cryptography
    dask
    dask-jobqueue>=0.8.1
    humanize
    psutil
    pyyaml
    watchdog
    importlib-metadata>=1.0
python_requires = >=3.9
include_package_data = True

[options.package_data]
* =
    *.sh
    *.yaml
